# taskflow-support-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  HANDOFF.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
agent/: graph.py  guardrails.py  llm.py  tools.py
app/: deps.py  main.py  schemas.py
app/static/: index.html
data/: seed_mongo.py
data/docs/: 00-product-brief.md  account-management.md  api-authentication.md  api-endpoints-tasks.md  api-rate-limits.md  billing-and-invoices.md  faq-general.md  features-boards-and-views.md  features-comments-and-mentions.md  features-integrations.md  features-mobile-app.md  features-projects-and-tasks.md  howto-connect-slack.md  howto-create-your-first-project.md  howto-export-project-data.md  howto-invite-team-members.md  howto-set-up-recurring-tasks.md  pricing-plans.md  troubleshooting-login-issues.md  troubleshooting-notifications.md  troubleshooting-sync-problems.md
docs/concepts/: 01-langgraph-vs-langchain.md
docs/decisions/: 001-why-uv.md
eval/: RETRIEVAL_EXPERIMENTS.md  agent_scenarios.jsonl  backend_comparison.json  compare_backends.py  golden.jsonl  results.json  run_agent_eval.py  run_eval.py  sweep.py
learning/concepts/: 01-langgraph-vs-langchain.md  project_interview.md  project_learning.md
learning/decisions/: 001-why-uv.md
rag/: answer.py  ingest.py  rerank.py  retrieve.py  retrieve_hybrid.py
tests/: conftest.py  test_api.py  test_guardrails.py  test_helpers.py
