[project]
name = "taskflow-support-agent"
version = "0.1.0"
description = "An AI customer support agent for a fictional SaaS, built with LangGraph, RAG, and tool-calling."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.7",
    "fastapi>=0.135.3",
    "groq>=0.30.0,<1.0.0",
    "langchain>=1.2.15",
    "langchain-core>=1.2.28",
    "langchain-groq>=1.0.0",
    "langchain-text-splitters>=1.1.1",
    "langfuse>=3.0.0",
    "langgraph>=1.1.6",
    "pydantic>=2.12.5",
    "pymongo>=4.16.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.4.0",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "faker>=40.13.0",
    "pytest>=9.0.3",
]
